--- a/随风飘效果.html
+++ b/随风飘效果.html
@@ -24,7 +24,7 @@
 	var oBtn = document.getElementById('oBtn');
 	var str = '';
 	var timer = null;
-	var arr = ['img/img1.jpg','img/img2.jpg','img/img3.jpg','img/img4.jpg'];
+	var arr = ['img/1.jpg','img/2.jpg','img/3.jpg','img/4.jpg'];
 	for(var i=0;i<10;i++){
 		str += '<div style="background:url('+arr[i%arr.length]+') no-repeat;left:'+(100+i*110)+'px;">'+(i+1)+'</div>';
 	}
